--- a/ogenix/files/assets/css/ogenix.css
+++ b/ogenix/files/assets/css/ogenix.css
@@ -290,14 +290,14 @@ ul {
   display: inline-block;
   font-size: 24px;
   line-height: 24px;
-  color: var(--ogenix-base);
+  color: #d8c8af;
   font-weight: 700;
   font-family: var(--ogenix-font-two);
 }
 
 .section-title__title {
   margin: 0;
-  color: var(--ogenix-black);
+  color: #50a72c;
   font-size: 45px;
   line-height: 54px;
   font-weight: 900;
@@ -11084,7 +11084,7 @@ ul {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
-  color: var(--ogenix-base);
+  color: #d8c8af;;
   margin-bottom: 30px;
 }
 
