--- a/ogenix/files/assets/css/ogenix.css
+++ b/ogenix/files/assets/css/ogenix.css
@@ -17,6 +17,16 @@
 /*--------------------------------------------------------------
 # Common
 --------------------------------------------------------------*/
+
+.circular-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover; /* Ensures the image covers the frame without stretching */
+  border: 5px solid white; /* Optional: Adds a border around the circle */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a subtle shadow */
+}
+
 :root {
   --ogenix-font: 'Manrope', sans-serif;
   --ogenix-font-two: 'Caveat', cursive;
@@ -440,7 +450,9 @@ ul {
   position: relative;
   display: block;
   transition: all 500ms ease;
+  height: 100px;
   z-index: 999;
+  background-color: var(--ogenix-black);
 }
 
 .main-header__wrapper {
@@ -458,7 +470,8 @@ ul {
 .main-header__logo {
   position: absolute;
   background-color: var(--ogenix-black);
-  padding: 0px 60px 0px;
+  height: 100px;
+  padding: 0px px 0px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -612,12 +625,12 @@ ul {
   flex-wrap: wrap;
   padding: 0 60px;
   padding-left: 285px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--ogenix-black);
   box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.05);
 }
 
 .main-menu__main-menu-box {
-  display: block;
+  padding-right: 25px;
 }
 
 .main-menu__right {
@@ -776,7 +789,7 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  color: var(--ogenix-gray);
+  color:  white;
   position: relative;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
@@ -813,7 +826,7 @@ ul {
   font-family: "Font Awesome 5 Free";
   content: "\f107";
   font-size: 13px;
-  color: var(--ogenix-gray);
+  color: white;
   transform: translateY(-50%);
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
@@ -824,7 +837,7 @@ ul {
 .main-menu .main-menu__list>li:hover>a,
 .stricky-header .main-menu__list>li.current>a,
 .stricky-header .main-menu__list>li:hover>a {
-  color: var(--ogenix-black);
+  color: #d8c8af;
 }
 
 .main-menu .main-menu__list>li.current>a::before,
@@ -5231,7 +5244,7 @@ ul {
   position: relative;
   display: block;
   background-color: var(--ogenix-black);
-  margin-top: -92px;
+  margin-top: 92px;
   z-index: 1;
   overflow: hidden;
 }
@@ -5241,7 +5254,7 @@ ul {
   bottom: 0;
   left: 0;
   right: 0;
-  top: -155px;
+  top: 5px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -5255,11 +5268,11 @@ ul {
   top: -1px;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 200px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  z-index: 1;
+ 
 }
 
 .site-footer__shape-1 {
@@ -5273,13 +5286,13 @@ ul {
 .site-footer__top {
   position: relative;
   display: block;
-  padding: 207px 0 90px;
+  padding: 35px 0 9px;
 }
 
 .footer-widget__about {
-  position: relative;
+
   display: block;
-  margin-top: -15px;
+  margin-top: -10px;
 }
 
 .footer-widget__logo {
@@ -5377,6 +5390,7 @@ ul {
 }
 
 .footer-widget__explore {
+  margin-top: 35px;
   position: relative;
   display: block;
 }
@@ -5443,6 +5457,7 @@ ul {
 }
 
 .footer-widget__contact {
+  margin-top: 35px;
   position: relative;
   display: block;
 }
